--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
-streamlit==1.31.0
-openai==1.23.3
 PyMuPDF==1.24.2
-python-pptx==0.6.23
-openpyxl==3.1.2
-python-docx==1.1.0
-mistralai==0.1.8
+python-pptx==1.0.2
+openpyxl==3.1.5
+python-docx==1.1.2
 langchain==0.1.16
 langchain-core==0.1.48
 langchain-openai==0.1.3
 langdetect==1.0.9
+streamlit==1.40.2
+openai==1.68.0
+google-cloud-aiplatform==1.71.1
+langid==1.1.6
+google-cloud-translate==3.20.2
+tiktoken==0.9.0
+requests==2.32.3
