--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,6 @@ google-cloud-translate==3.20.2
 tiktoken==0.9.0
 requests==2.32.3
 mistralai==0.1.8
+google-auth==2.39.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.0
